# src/Modules/Inventory/FestOS.Modules.Inventory.Application/Warehouses/CreateWarehouseValidator.cs
@@ -1,0 +1,9 @@
+using FluentValidation;
+
+namespace FestOS.Modules.Inventory.Application.Warehouses;
+
+internal sealed class CreateWarehouseValidator : AbstractValidator<CreateWarehouseCommand>
+{
+    public CreateWarehouseValidator() =>
+        this.ValidateWarehouse(command => command.Name, command => command.City, command => command.Address);
+}
